syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.agoncal.application.currencyexchange.trades";
option java_outer_classname = "TradingServiceProto";

package trading;

service TradingService {
    rpc ExecuteTrade(TradeRequest) returns (TradeResponse);
    rpc GetAllTrades(UserIdRequest) returns (TradeListResponse);
}

message TradeRequest {
    string user_id = 1;
    string to_currency = 2;      // EUR, GBP, JPY, etc.
    double exchange_rate = 3;    // Rate used for conversion
    double usd_amount = 4;       // Amount in USD to convert
}

message TradeResponse {
    int64 trade_id = 1;
    string status = 2;           // COMPLETED, FAILED, etc.
    double usd_amount = 3;
    string to_currency = 4;
    double converted_amount = 5;
    double exchange_rate = 6;
    string timestamp = 7;
}

message UserIdRequest {
    string user_id = 1;
}

message TradeListResponse {
    repeated TradeResponse trades = 1;
}

message ValidationResponse {
    bool is_valid = 1;
    string error_message = 2;
}